add bill manage : load doc invoice, upload doc 70%
add bill manage : load doc invoice, upload doc 70%

--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -148,6 +148,12 @@
           </mat-icon>
           <a matLine>Dashboard</a>
         </mat-list-item>
+        <mat-list-item [routerLink]="['/bills']">
+          <mat-icon matListIcon>
+            <fa-icon icon="random" size="sm"></fa-icon>
+          </mat-icon>
+          <a matLine>Quản lý hóa đơn</a>
+        </mat-list-item>
         <!-- <mat-list-item [routerLink]="['/navigation']">
           <mat-icon matListIcon>
             <fa-icon icon="location-arrow" size="sm"></fa-icon>
