--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -148,7 +148,7 @@
           </mat-icon>
           <a matLine>Dashboard</a>
         </mat-list-item>
-        <mat-list-item [routerLink]="['/bills']">
+        <mat-list-item *midasHasPermission="'ALL_FUNCTIONS'" [routerLink]="['/bills']">
           <mat-icon matListIcon>
             <fa-icon icon="random" size="sm"></fa-icon>
           </mat-icon>
