--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -59,7 +59,7 @@
 
   </span>
 
-  <mifosx-search-tool ></mifosx-search-tool>
+  <mifosx-search-tool *midasHasPermission="'ALL_FUNCTIONS'" ></mifosx-search-tool>
 
   <mifosx-theme-picker fxHide.lt-md></mifosx-theme-picker>
 
