--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
 
       </mat-card-content>
       <midas-mainboard></midas-mainboard>
-      <img mat-card-image src="assets/images/midas-logo-flat.png" alt="MIDAS">
+      <!-- <img mat-card-image src="assets/images/midas-logo-flat.png" alt="MIDAS"> -->
 
     </mat-card>
 
