--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -64,6 +64,7 @@
   <button mat-menu-item routerLink="/groups">{{'Toolbar_Component.lblGroup'|translate}}</button>
   <button mat-menu-item routerLink="/centers">{{'Toolbar_Component.lblCenter'|translate}}</button>
   <button mat-menu-item routerLink="/terminals">{{'Toolbar_Component.labelTerminals'|translate}}</button>
+  <button mat-menu-item routerLink="/third-party">{{'Toolbar_Component.lblThirdParty'|translate}}</button>
   <button mat-menu-item routerLink="/accounts/balance-clients">{{'Quản lý số dư khách hàng'|translate}}</button>
   <button mat-menu-item routerLink="/accounts/balance-teller">{{'Quản lý số dư teller'|translate}}</button>
 
