--- a/src/app/home/rollterm-list/rollterm-list.component.html
+++ b/src/app/home/rollterm-list/rollterm-list.component.html
@@ -13,7 +13,7 @@
     <mat-card-content >
 
       <mat-accordion>
-        <mat-expansion-panel expanded="true">
+        <mat-expansion-panel expanded="false">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Xem chi tiết
